// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkbox/presenters/ModalHeaderPresenter  1`] = `
<header
  className="hig__modal-V1__header"
  id={undefined}
>
  <button
    className="hig__icon-button hig__icon-button--primary"
    onBlur={undefined}
    onClick={undefined}
    onFocus={undefined}
    onMouseEnter={undefined}
    onMouseLeave={undefined}
    title="Close"
  >
    <svg
      className="hig__icon-button__icon"
      height="19"
      viewBox="0 0 19 19"
      width="19"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        x-close-gray
      </title>
      <g
        fill="#949DA2"
        fillRule="evenodd"
      >
        <path
          d="M1.414 0l16.97 16.97-1.413 1.414L0 1.414z"
        />
        <path
          d="M18.385 1.414l-16.97 16.97L0 16.972 16.97 0z"
        />
      </g>
    </svg>
  </button>
  <span
    className="hig__modal-V1__header-title"
  />
</header>
`;

exports[`checkbox/presenters/ModalHeaderPresenter  2`] = `
<header
  className="hig__modal-V1__header"
  id={undefined}
>
  <p>
    Title
  </p>
</header>
`;

exports[`checkbox/presenters/ModalHeaderPresenter  3`] = `
<header
  className="hig__modal-V1__header"
  id={undefined}
>
  <button
    className="hig__icon-button hig__icon-button--primary"
    onBlur={undefined}
    onClick={[Function]}
    onFocus={undefined}
    onMouseEnter={undefined}
    onMouseLeave={undefined}
    title="Close"
  >
    <svg
      className="hig__icon-button__icon"
      height="19"
      viewBox="0 0 19 19"
      width="19"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        x-close-gray
      </title>
      <g
        fill="#949DA2"
        fillRule="evenodd"
      >
        <path
          d="M1.414 0l16.97 16.97-1.413 1.414L0 1.414z"
        />
        <path
          d="M18.385 1.414l-16.97 16.97L0 16.972 16.97 0z"
        />
      </g>
    </svg>
  </button>
  <span
    className="hig__modal-V1__header-title"
  >
    HELLO
  </span>
</header>
`;
